// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`EventsPage should render EventDetail 1`] = `
<Translate(EventDetail)
  event={
    EventModel {
      "_address": "",
      "_allDay": true,
      "_availableLanguages": Object {
        "ar": "1236",
        "en": "1234",
      },
      "_content": "",
      "_endDate": "2017-11-18T18:30:00.000Z",
      "_excerpt": "",
      "_id": 1235,
      "_startDate": undefined,
      "_thumbnail": "",
      "_title": "erstes Event",
      "_town": "",
    }
  }
  language="en"
  location="augsburg"
/>
`;

exports[`EventsPage should render EventList 1`] = `
<Translate(EventList)
  events={
    Array [
      EventModel {
        "_address": "",
        "_allDay": true,
        "_availableLanguages": Object {
          "ar": "1236",
          "de": "1235",
        },
        "_content": "",
        "_endDate": "2017-11-18T18:30:00.000Z",
        "_excerpt": "",
        "_id": 1234,
        "_startDate": "2017-11-18T08:30:00.000Z",
        "_thumbnail": "",
        "_title": "first Event",
        "_town": "",
      },
      EventModel {
        "_address": "",
        "_allDay": true,
        "_availableLanguages": Object {
          "ar": "1236",
          "en": "1234",
        },
        "_content": "",
        "_endDate": "2017-11-18T18:30:00.000Z",
        "_excerpt": "",
        "_id": 1235,
        "_startDate": undefined,
        "_thumbnail": "",
        "_title": "erstes Event",
        "_town": "",
      },
      EventModel {
        "_address": "",
        "_allDay": true,
        "_availableLanguages": Array [],
        "_content": "",
        "_endDate": "2017-11-18T18:30:00.000Z",
        "_excerpt": "",
        "_id": 2,
        "_startDate": "2017-11-18T08:30:00.000Z",
        "_thumbnail": "",
        "_title": "second Event",
        "_town": "",
      },
    ]
  }
  language="en"
  url="/augsburg/en/events"
/>
`;

exports[`EventsPage should render Spinner 1`] = `
<Spinner
  fadeIn="full"
  name="line-scale-party"
  noFadeIn={false}
  overrideSpinnerClassName=""
/>
`;
